# triadic-novelty

./: README.md  pyproject.toml  requirements.txt
dataset/: Artificial_Scholarly_Dataset.csv  Artificial_Scholarly_Dataset_old.csv
docs/: example.py
mvpnovelty/: __init__.py  main.py  measures.py
reference/: Step2_CreateNewNoveltyArticleLevel_20241205.ipynb  Step3_CreateNullModel_FieldLevel_240404.py  Step6_CalculateZScores.ipynb
tests/: test_main.py
triadic_novelty/: __init__.py  main.py  measures.py
