[tool.poetry]
name = "mvpnovelty"
version = "0.1.0"
description = "A boilerplate for starting a modern Python package."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "mvpnovelty" }
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
